src/objects/SMS_Log_c__c.object
<CustomObject>
    <fields>
        <fullName>froms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msg__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>SMS Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SMS_Log__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>